[package]
name = "roost"
description = "Command line interpreter for the roost language"
version = "1.1.0"
edition = "2021"
authors = ["RubixDev"]
license = "GPL-2.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = { version = "1.20.0", features = ["maths"] }
rustyline = "9.1.2"
structopt = "0.3.26"
syntect = { version = "4.6.0", features = ["default-fancy"], default-features = false }

[dev-dependencies]
ntest = "0.7.3"
plist = "1.3.1"
reqwest = { version = "0.11.9", features = ["blocking"] }
serde_json = "1.0.78"
