[package]
name = "roost"
description = "Interpreter library for the roost language"
version = "1.1.0"
edition = "2021"
authors = ["RubixDev"]
license = "GPL-2.0-only"

[workspace]
members = ["cli"]
default-members = ["cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = { version = "1.20.0", features = ["maths"] }

[dev-dependencies]
ntest = "0.7.3"
plist = "1.3.1"
reqwest = { version = "0.11.9", features = ["blocking"] }
serde_json = "1.0.78"
