[package]
name = "roost"
description = "Interpreter library for the roost language"
version = "1.2.0"
edition = "2021"
authors = ["RubixDev"]
license = "GPL-2.0-only"

[workspace]
members = ["roost-cli"]
default-members = ["roost-cli"]

[features]
no_std_io = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = { version = "1.25.0", features = ["maths"] }
once_cell = "1.13.0"
